# cargo-template

./: Cargo.toml  Dockerfile  deny.toml
.github/workflows/: clippy.yml
