[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
readme = "README.md"

[dependencies]


[lints.rust]
warnings = "deny"

[lints.clippy]
# cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "warn"
negative_feature_names = "deny"
redundant_feature_names = "deny"
wildcard_dependencies = "deny"

complexity = "deny"

nursery = "warn"

pedantic = "warn"

perf = "deny"

style = "deny"

suspicious = "deny"


