[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
readme = "README.md"

[dependencies]


[lints.rust]
warnings = "deny"

[lints.clippy]
# cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "warn"
negative_feature_names = "deny"
redundant_feature_names = "deny"
wildcard_dependencies = "deny"

restriction = { level = "deny", priority = -1 }
missing_docs_in_private_items = "allow"
question_mark_used = "allow"
print_stdout = "allow"
implicit_return = "allow"
shadow_reuse = "allow"
absolute_paths = "allow"
use_debug = "allow"
unwrap_used = "allow"
std_instead_of_alloc = "allow"

complexity = "deny"

nursery = "deny"

pedantic = { level = "deny", priority = -1 }
uninlined_format_args = "allow"

perf = "deny"

style = "deny"

suspicious = { level = "deny", priority = -1 }
blanket_clippy_restriction_lints = "allow"

