[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
readme = "README.md"

[dependencies]

[lints.rust]
rust_2018_idioms = {level = "deny", priority = -1}

[lints.clippy]
complexity = {level = "deny", priority = -1}
nursery = { level = "deny", priority = -1 }
pedantic = {level = "deny", priority = -1}
perf = {level = "deny", priority = -1}
style = {level = "deny", priority = -1}
suspicious = {level = "deny", priority = -1}
